# aegis

./: .dockerignore  .env.example  .gitignore  Dockerfile.control  Dockerfile.data  Makefile  QUICKSTART.md  README.md  config.docker.yaml  config.yaml  docker-compose.yml  prometheus-alerts.yml  prometheus.yml  test-proxy.sh
.github/workflows/: ci.yml
bench/: RESULTS.md  config.bench.yaml  docker-compose.bench.yml  run-bench.sh
bench/results/: aegis-20260719T171822Z.txt  direct-20260719T171822Z.txt
charts/aegis/: .helmignore  Chart.yaml  README.md  values.yaml
charts/aegis/templates/: _helpers.tpl  controlplane-ca-configmap.yaml  controlplane-configmap.yaml  controlplane-deployment.yaml  controlplane-secret.yaml  controlplane-service.yaml  dataplane-deployment.yaml  (+4 more)
control-plane/: go.mod  go.sum
control-plane/cmd/: main.go
control-plane/proto/: go.mod  go.sum
data-plane/: Cargo.toml  build.rs
data-plane/benches/: hot_path.rs
data-plane/src/: access_log.rs  circuit_breaker.rs  config.rs  connection.rs  grpc_server.rs  lib.rs  load_balancer.rs  main.rs  metrics.rs  metrics_server.rs  rate_limiter.rs  tcp_proxy.rs  udp_proxy.rs
docs/decisions/: 0001-go-control-plane-rust-data-plane.md  0002-grpc-for-control-data-plane-communication.md  0003-concurrency-model.md  0004-load-balancing-strategy.md  0005-single-node-v1.md  README.md
docs/profiling/: PROFILING.md
examples/: examples.md  simple-http-server.py  udp-echo-server.py
proto/: proxy.proto
scripts/: failure-demo.sh  install-hooks.sh  test-advanced-features.sh  test-proxy.sh  test-udp-proxy.sh
(+28 files in other folders)
