[package]
name = "aegis-data"
version = "0.1.0"
edition = "2021"
authors = ["lazzerex"]
description = "Aegis high-performance data plane"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.10"
prost = "0.12"
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"
dashmap = "5.5"
parking_lot = "0.12"

[build-dependencies]
tonic-build = "0.10"
